[gd_scene load_steps=13 format=3 uid="uid://c70rhvk2okkcu"]

[ext_resource type="StyleBox" uid="uid://do5c5v5kvgv0s" path="res://resources/styles/panel_small_style.tres" id="1_wcf51"]
[ext_resource type="Script" path="res://scripts/ui/buy_ants.gd" id="2_sf7hb"]
[ext_resource type="Texture2D" uid="uid://bh01xbmjanku0" path="res://assets/textures/gui/button_bg.png" id="2_shpjn"]
[ext_resource type="Texture2D" uid="uid://jv8twhntt6x3" path="res://assets/textures/gui/button_hover_bg.png" id="3_bwnfl"]
[ext_resource type="Texture2D" uid="uid://slraulfmk8c0" path="res://assets/textures/gui/pictograms.png" id="4_s7jbe"]
[ext_resource type="PackedScene" uid="uid://w3ydggdgvyqn" path="res://scenes/ui/honeydew_counter.tscn" id="5_5hx6c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_t7i0n"]
atlas = ExtResource("4_s7jbe")
region = Rect2(37.1788, 80.4158, 27.2037, 25.0274)

[sub_resource type="AtlasTexture" id="AtlasTexture_du04k"]
atlas = ExtResource("4_s7jbe")
region = Rect2(28.6998, 105.07, 81.3694, 45.293)

[sub_resource type="AtlasTexture" id="AtlasTexture_eg31t"]
atlas = ExtResource("4_s7jbe")
region = Rect2(35.3161, 150.756, 77.1561, 46.083)

[sub_resource type="AtlasTexture" id="AtlasTexture_spu7x"]
atlas = ExtResource("4_s7jbe")
region = Rect2(134.461, 11.7237, 236.668, 108.79)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdhp3"]
atlas = ExtResource("4_s7jbe")
region = Rect2(593.488, 12.3042, 44.8981, 33.8908)

[sub_resource type="AtlasTexture" id="AtlasTexture_nknr8"]
atlas = ExtResource("4_s7jbe")
region = Rect2(142.097, 122.771, 180.55, 96.3861)

[node name="BuyAnts" type="Panel"]
offset_left = 21.0
offset_top = 12.0
offset_right = 271.0
offset_bottom = 215.0
pivot_offset = Vector2(121, 256)
theme_override_styles/panel = ExtResource("1_wcf51")
script = ExtResource("2_sf7hb")

[node name="Equals1" type="TextureRect" parent="."]
layout_mode = 1
offset_left = 110.0
offset_top = 95.0
offset_right = 137.0
offset_bottom = 120.0
texture = SubResource("AtlasTexture_t7i0n")

[node name="Equals2" type="TextureRect" parent="."]
layout_mode = 1
offset_left = 111.0
offset_top = 33.0
offset_right = 138.0
offset_bottom = 58.0
texture = SubResource("AtlasTexture_t7i0n")

[node name="BuyNitwitButton" type="TextureButton" parent="."]
modulate = Color(0.81, 0.748035, 0.5913, 1)
layout_mode = 0
offset_left = 13.0
offset_top = 16.0
offset_right = 112.0
offset_bottom = 72.0
texture_normal = ExtResource("2_shpjn")
texture_pressed = ExtResource("2_shpjn")
texture_hover = ExtResource("3_bwnfl")
ignore_texture_size = true
stretch_mode = 0

[node name="ButtonTexture" type="TextureRect" parent="BuyNitwitButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.5
offset_top = -24.0
offset_right = 41.5
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_du04k")

[node name="NitwitPriceCounter" parent="." instance=ExtResource("5_5hx6c")]
layout_mode = 0
offset_left = 136.0
offset_top = 27.0
offset_right = 220.0
offset_bottom = 71.0

[node name="BuyGathererButton" type="TextureButton" parent="."]
modulate = Color(0.81, 0.748035, 0.5913, 1)
layout_mode = 0
offset_left = 15.0
offset_top = 77.0
offset_right = 114.0
offset_bottom = 133.0
texture_normal = ExtResource("2_shpjn")
texture_pressed = ExtResource("2_shpjn")
texture_hover = ExtResource("3_bwnfl")
ignore_texture_size = true
stretch_mode = 0

[node name="ButtonTexture" type="TextureRect" parent="BuyGathererButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.5
offset_top = -25.0
offset_right = 40.5
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_eg31t")

[node name="GathererPriceCounter" parent="." instance=ExtResource("5_5hx6c")]
layout_mode = 0
offset_left = 135.0
offset_top = 87.0
offset_right = 219.0
offset_bottom = 131.0

[node name="HoneydewCounter" parent="." instance=ExtResource("5_5hx6c")]
layout_mode = 0
offset_left = 16.0
offset_top = 150.0
offset_right = 235.0
offset_bottom = 183.0

[node name="NitwitPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 249.0
offset_top = -11.0
offset_right = 506.0
offset_bottom = 124.0
theme_override_styles/panel = ExtResource("1_wcf51")

[node name="InfoTexture" type="TextureRect" parent="NitwitPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -54.0
offset_right = 124.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_spu7x")

[node name="Arrow" type="TextureRect" parent="NitwitPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -147.5
offset_top = -24.5
offset_right = -103.5
offset_bottom = 8.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_gdhp3")

[node name="GathererPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 262.0
offset_top = 43.0
offset_right = 458.0
offset_bottom = 174.0
theme_override_styles/panel = ExtResource("1_wcf51")

[node name="InfoTexture" type="TextureRect" parent="GathererPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -48.0
offset_right = 90.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_nknr8")

[node name="Arrow" type="TextureRect" parent="GathererPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -13.5
offset_right = -81.0
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_gdhp3")
